[gd_scene load_steps=7 format=3 uid="uid://b4uhany0u32p5"]

[ext_resource type="Script" uid="uid://huiybrknlxs1" path="res://Scripts/GUI/HUD.gd" id="1_sd512"]
[ext_resource type="Texture2D" uid="uid://ci2e4xw5crqw6" path="res://Assets/2D/Sprites/E_key.png" id="2_yx2xf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8b7j0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tnqb4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yx2xf"]
bg_color = Color(0.564706, 0, 0.329412, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6svr"]
bg_color = Color(0.857534, 2.40654e-06, 0.511057, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_sd512")

[node name="FPSLabel" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.963542
anchor_top = 0.0138889
anchor_right = 0.989583
anchor_bottom = 0.0462963
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 25
text = "60"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="InteractionPrompt" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchor_left = 0.473958
anchor_top = 0.848765
anchor_right = 0.526042
anchor_bottom = 0.941358
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="InteractionPrompt"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yx2xf")
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseMenu"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.326389
anchor_top = 0.191358
anchor_right = 0.673611
anchor_bottom = 0.808642
offset_left = 200.0
offset_top = 200.0
offset_right = -200.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RESUMEButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.857534, 2.40654e-06, 0.511057, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.564706, 0, 0.329412, 1)
theme_override_colors/font_pressed_color = Color(0.403494, 2.88785e-07, 0.22941, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/hover = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/normal = SubResource("StyleBoxFlat_8b7j0")
text = "RESUME"

[node name="GAMMASliderContainer" type="VBoxContainer" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="GAMMA_Label" type="Label" parent="PauseMenu/Panel/VBoxContainer/GAMMASliderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.564706, 0, 0.329412, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 44
theme_override_styles/normal = SubResource("StyleBoxFlat_tnqb4")
text = "GAMMA"
horizontal_alignment = 1

[node name="GAMMASlider" type="HSlider" parent="PauseMenu/Panel/VBoxContainer/GAMMASliderContainer"]
clip_contents = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_yx2xf")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_x6svr")
min_value = 0.5
max_value = 5.0
step = 0.1
value = 2.0

[node name="OPTIONSButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.929412, 0.690196, 0.4, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/hover = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/normal = SubResource("StyleBoxFlat_8b7j0")
text = "OPTIONS"

[node name="MAINMENUButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.929412, 0.690196, 0.4, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/hover = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/normal = SubResource("StyleBoxFlat_8b7j0")
text = "MAIN MENU"

[node name="QUITButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.857534, 2.40654e-06, 0.511057, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.564706, 0, 0.329412, 1)
theme_override_colors/font_pressed_color = Color(0.403494, 2.88785e-07, 0.22941, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/hover = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/normal = SubResource("StyleBoxFlat_8b7j0")
text = "QUIT"

[connection signal="focus_entered" from="PauseMenu/Panel/VBoxContainer/RESUMEButton" to="." method="_on_resume_button_focus_entered"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/RESUMEButton" to="." method="_on_resume_button_pressed"]
[connection signal="value_changed" from="PauseMenu/Panel/VBoxContainer/GAMMASliderContainer/GAMMASlider" to="." method="_on_gamma_slider_value_changed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/OPTIONSButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/MAINMENUButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/QUITButton" to="." method="_on_close_button_pressed"]
